--- a/iOSCaelum/Info.plist
+++ b/iOSCaelum/Info.plist
@@ -36,6 +36,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Precisamos de sua autorização para detectar sua localização</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Precisamos de sua autorização para detectar sua localização</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
